--- a/deployment/templates/nginx/api.mohistmc.com.conf.j2
+++ b/deployment/templates/nginx/api.mohistmc.com.conf.j2
@@ -2,9 +2,9 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name mohistmc.com www.mohistmc.com site.mohistmc.com;
+    server_name api.mohistmc.com;
 
-    location /api/v3 {
+    location / {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
