--- a/deployment/templates/services/var-mohistmc.mount.j2
+++ b/deployment/templates/services/var-mohistmc.mount.j2
@@ -7,7 +7,7 @@ Wants=network-online.target
 What=ubuntu@141.145.204.203:/var/mohistmc
 Where=/var/mohistmc
 Type=fuse.sshfs
-Options=IdentityFile=/home/ansible/.ssh/SSH_PRIVATE_KEY_VM_ORACLE,allow_other,StrictHostKeyChecking=no,reconnect,ServerAliveInterval=15,ServerAliveCountMax=3,PasswordAuth>
+Options=IdentityFile=/home/ansible/.ssh/SSH_PRIVATE_KEY_VM_ORACLE,allow_other,StrictHostKeyChecking=no,reconnect,ServerAliveInterval=15,ServerAliveCountMax=3
 
 [Install]
 WantedBy=multi-user.target
